# ISCX-botnet-dataset

./: .gitattributes  README.md
report/: statistics.tex
traffic/: pyproject.toml
traffic/tests/: test_traffic.py
traffic/traffic/: __main__.py
traffic/traffic/res/: ISCX_Botnet-Training.csv  ISCX_Botnet-Training_Filter.csv
traffic/traffic/resds/: ISCX_Botnet-Testing.csv
